# CS202-CSGS

./: .gitignore  CMakeLists.txt  README.md  cPeople.cpp  cPeople.h  cache_rule.rtf  main.cpp
Debug/CROSSING_ROAD.app/Contents/: Info.plist
Debug/CROSSING_ROAD.app/Contents/MacOS/: CROSSING_ROAD
datagame/: data_saved_0.txt  data_saved_1.txt  data_saved_2.txt  data_saved_3.txt  data_saved_4.txt  data_saved_5.txt
environment_src_design/: dump.txt
project/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake
src/: AboutState.cpp  AboutState.hpp  Animal.cpp  Animal.hpp  CMakeLists.txt  EventDetector.cpp  EventDetector.hpp  Game.cpp  Game.hpp  GameLoadedState.cpp  GameLoadedState.hpp  GamePauseState.cpp  GamePauseState.hpp  GameState.cpp  GameState.hpp  GameStateScreen.cpp  GameStateScreen.hpp  Handler.hpp  Lane.cpp  Lane.hpp  LaneGenerator.cpp  LaneGenerator.hpp  Level.cpp  Level.hpp  LoadMenuState.cpp  LoadMenuState.hpp  Log.cpp  Log.hpp  LostState.cpp  LostState.hpp  MenuState.cpp  MenuState.hpp  Pathway.cpp  Pathway.hpp  People.cpp  People.hpp  Position.cpp  Position.hpp  ResourceManager.cpp  ResourceManager.hpp  (+23 more)
src_design/environment/: dump.txt
